syntax = "proto3";

package fizzbuzz;

// The fizzbuzz service definition.
service Fizzbuzz {
  // Processes a fizzbuzz request
  rpc DoFizzbuzz (FizzbuzzRequest) returns (FizzbuzzReply) {}
}

// The request containing the fizzbuzz params.
message FizzbuzzRequest {
  string string1 = 1;
  string string2 = 2;
  int32 int1 = 3;
  int32 int2 = 4;
  int32 limit = 5;
}

// The response message containing the result
message FizzbuzzReply {
  repeated string reply = 1;
}
